name:                gideon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/gideon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Solution
                     , Data.Problem
                     , Geometry.Ratio
                     , Milib.IO
                     , PW.Gideon
                     , PW.Jace
                     , PW.Nissa
                     , Spell.AncestralRecall
                     , Spell.Divination
                     , Spell.Ponder
                     , Spell.TimeWalk
                     , Spell.TimeSpiral
                     , Spell.WorldlyTutor
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , bytestring
  default-language:    Haskell2010

executable gideon
  hs-source-dirs:      gideon
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gideon
  default-language:    Haskell2010

executable jace
  hs-source-dirs:      jace
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gideon
  default-language:    Haskell2010

executable nissa
  hs-source-dirs:      nissa
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gideon
  default-language:    Haskell2010

test-suite gideon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gideon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gideon
